tests/typeck/valid/calls.vit
space tests/typeck/valid/calls

proc add_one(value: int) -> int {
  give value + 1;
}

proc main() -> int {
  give add_one(41);
}
