tests/typeck/invalid/assignment_mismatch.vit
space tests/typeck/invalid/assignment_mismatch

proc main() -> int {
  let value: int = 1;
  set value = "oops";
  give value;
}
